# 2d_game_framework

./: CMakeLists.txt  Readme.md
include/art_library/: ArtAssetLibrary.h
include/components/: Bullet.h  ComponentFactories.h  Player.h
include/core/: app_2d.h  physics_2d.h
include/render/: actor_2d.h  animation.h  camera.h  renderer.h  sdl_renderer.h  sdl_texture.h  sprite.h  texture.h
include/virtual/: component.h
source/: CMakeLists.txt  main.cpp
source/art_library/: ArtAssetLibrary.cpp
source/components/: Bullet.cpp  ComponentFactories.cpp
source/core/: app_2d.cpp  physics_2d.cpp
source/render/: actor_2d.cpp  animation.cpp  camera.cpp  renderer.cpp  sdl_animation.cpp  sdl_camera.cpp  sdl_renderer.cpp  sdl_texture.cpp  sprite.cpp  texture.cpp
